# llm-terminal

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  TERMINAL_EMULATOR.md  setup_env.bat  setup_env.ps1  setup_env.sh
.github/workflows/: ci.yml
src/: agents.rs  app.rs  code_executor.rs  config.rs  context.rs  lib.rs  main.rs  models.rs  workflows.rs
src/llm/: claude.rs  client.rs  mod.rs  openai.rs
src/terminal/: emulator.rs  mod.rs  process.rs  pty.rs
src/ui/: chat.rs  input.rs  mod.rs  settings.rs  terminal.rs
