[package]
name = "llm-terminal"
version = "0.1.0"
edition = "2021"
description = "A cross-platform terminal interface for chatting with multiple LLM providers"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/llm-terminal"
keywords = ["llm", "terminal", "chat", "ai", "claude", "openai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
