[package]
name = "llm-terminal"
version = "0.1.0"
edition = "2021"
description = "A cross-platform desktop terminal emulator for chatting with multiple LLM providers"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/llm-terminal"
keywords = ["llm", "terminal", "chat", "ai", "claude", "openai", "desktop", "emulator"]
categories = ["gui", "development-tools"]

[dependencies]
# GUI Framework
egui = "0.24"
eframe = { version = "0.24", default-features = false, features = [
  "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }

# Async runtime and HTTP
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Configuration and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
regex = "1.10"
which = "6.0"

# Terminal emulation helpers
crossterm = "0.28"  # Keep for cross-platform terminal features
